# randomhand

./: Cargo.toml  Dockerfile  README.md
hands/: 3b10i.txt  3b12i.txt  3b12o.txt  3b15i.txt  3b15o.txt  3b2o.txt  3b4i.txt  3b4o.txt  3b6i.txt  3b6o.txt  3b8O.txt  3b8i.txt  4b2.txt  4b3.txt  4b4.txt  4b6.txt  fi12.txt  fi25.txt  fi30.txt  fi40.txt
ranges/: 3b10o.txt  4b5.txt  fi15.txt  fi20.txt  fi50.txt
src/: main.rs
