[package]
name = "randomhand"
version = "0.1.0"
authors = ["zups <zupsor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.7.0"
rand = "0.7.3"
strum = "0.19.2"
strum_macros = "0.19.2"
itertools = "0.9.0"
lazy_static = "1.4.0"
